@@ -1,3 +1,8 @@
+2007-10-11  Emilio Meschi  <emilio.meschi@cern.ch>
+		
+	* tag V00-06-00
+	* modifications to stopping to completely support playback
+
 2007-09-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-05-07
